critical-mineral/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mineralinsight
  labels:
    name: mineralinsight
    environment: production
